# QwenVoiceToText_CV2T_v3

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  Test-CV2T.ps1  cv2t.spec  download_model.py  plan-cv2tV2ImplementationPlan.prompt.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml  test.yml
cv2t/: __init__.py  __main__.py  _constants.py  audio.py  clipboard.py  config.py  gpu_monitor.py  hotkeys.py  main_window.py  model_downloader.py  pro_settings_dialog.py  settings_dialog.py  text_processor.py  workers.py
cv2t/engine/: __init__.py  base.py  canary.py  canary_bridge.py  canary_worker.py  whisper.py
installer/: Build-Installer.ps1  Enable-Canary.ps1  Install-CV2T-Bin.ps1  Install-CV2T-Source.ps1  _check_parse.ps1  cv2t-setup.iss
tests/: test_audio.py  test_canary_bridge.py  test_canary_perf.py  test_config.py  test_enable_canary.py  test_engine_base.py  test_engine_load.py  test_frozen_compat.py  test_main_window_layout.py  test_model_downloader.py  test_pro_preset.py  test_professional_mode.py  test_settings_dialog.py  test_text_processor.py
