[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv2t"
version = "3.0.0"
description = "Native Windows voice-to-text using Canary or Whisper — no Docker, no WSL, no HTTP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "kwp490" }]

dependencies = [
    "PySide6>=6.6,<7",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
    "keyboard>=0.13",
    "nvidia-ml-py>=12.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
canary = [
    "nemo_toolkit[asr]>=2.0,<3",
    "torch>=2.1,<2.8",
    "accelerate",
    "huggingface-hub>=0.34.0",
]
whisper = [
    "faster-whisper>=1.1,<2",
    "nvidia-cublas-cu12>=12.4; sys_platform == 'win32'",
    "nvidia-cudnn-cu12>=9.1; sys_platform == 'win32'",
]
all = ["cv2t[canary,whisper]"]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
]

[project.scripts]
cv2t = "cv2t.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
